# tsdata

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: preprelease-testpypi.yml  python-publish.yml  python-testing.yml  tag-on-release-branch.yml
src/tsdata/: __init__.py  _version.py  py.typed
src/tsdata/raw/: __init__.py  fpp3.py  registry.py
src/tsdata/raw/fpp3/: __init__.py  prison.csv  us_gas_total.csv  warsaw_air_quality.csv
src/tsdata/raw/fpp3_csv/: LakeHuron.csv
src/tsdata/raw/fpppy/: AirPassengers.csv  EPF_FR_BE.csv  EPF_FR_BE_futr.csv  EPF_FR_BE_static.csv  USAccDeaths.csv  US_change.csv  __init__.py  algeria_exports.csv  algeria_exports_unparsed.csv  ansett.csv  ansett_unparsed.csv  aus_accomodation.csv  aus_arrivals.csv  aus_economy.csv  aus_economy_unparsed.csv  aus_livestock.csv  aus_production.csv  aus_production_formatted.csv  aus_tourism.csv  bank_calls.csv  boston_marathon.csv  canadian_gas.csv  chinese_gdp.csv  cowtemp.csv  eggs.csv  electricity_future_vars.csv  electricity_short.csv  gafa_stock.csv  global_economy.csv  hsales_unparsed.csv  insurance.csv  labour.csv  lake_huron.csv  mink.csv  pedestrian.csv  pelt.csv  prison.csv  prison_population.csv  strikes.csv  total_cost_df.csv  (+5 more)
test/: test_import.py
