[bumpversion]
current_version = 0.2.0
commit = False
tag = False

[metadata]
name = py-tsdata
version = attr: tsdata.__version__
author = Anatoly Makarevich
author_email = git@nowan.dev
description = Time Series Datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NowanIlfideme/tsdata
project_urls = 
	Bug Tracker = https://github.com/NowanIlfideme/tsdata/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.8
install_requires = 
	pandas
include_package_data = True

[options.packages.find]
include = tsdata

[options.package_data]
tsdata = *.csv, *.parquet, *.nc, *.yaml

[options.extras_require]
dev = 
	flake8
	black
	isort
	bump2version
	pytest
	mypy

[bumpversion:file:setup.cfg]

[bumpversion:file:src/tsdata/__init__.py]
