[bumpversion]
current_version = 0.3.3
commit = False
tag = False

[metadata]
name = py-tsdata
version = attr: tsdata.__version__
author = Anatoly Makarevich
author_email = git@nowan.dev
description = Time Series Datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NowanIlfideme/tsdata
project_urls = 
	Bug Tracker = https://github.com/NowanIlfideme/tsdata/issues
license_files = LICENSE
platform = any
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
zip_safe = false
include_package_data = True
package_dir = 
	= src
packages = find:
python_requires = >=3.7
install_requires = 
	pandas
tests_require = 
	pytest

[options.packages.find]
where = src

[options.package_data]
* = *.csv, *.parquet, *.nc

[options.extras_require]
dev = 
	flake8
	black
	isort
	bump2version
	pytest
	mypy

[bdist_wheel]
universal = true

[bumpversion:file:setup.cfg]

[bumpversion:file:src/tsdata/__init__.py]
